[gd_scene load_steps=5 format=3 uid="uid://1f3vadqgcqf3"]

[ext_resource type="Script" uid="uid://dpuugwrdilecr" path="res://ui/combat/trade_action_inventory/trade_unit_inventory.gd" id="1_pv2fu"]
[ext_resource type="Theme" uid="uid://basxgfcidqdr7" path="res://resources/themes/combat/default_ui_theme.tres" id="2_jr2hg"]
[ext_resource type="Theme" uid="uid://d038xrv8o2iwr" path="res://resources/themes/Header_text.tres" id="2_wle3t"]
[ext_resource type="PackedScene" uid="uid://cxd4y8qg56hq3" path="res://ui/combat/shared/unit_inventory_slot/unit_inventory_slot.tscn" id="3_w2fve"]

[node name="TradeUnitInventory" type="Control"]
custom_minimum_size = Vector2(310, 310)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 315.0
script = ExtResource("1_pv2fu")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 310.0
offset_bottom = 310.0
theme = ExtResource("2_jr2hg")

[node name="MarginContainer" type="CenterContainer" parent="Background"]
layout_mode = 0
offset_right = 310.0
offset_bottom = 310.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="HeaderPanel" type="CenterContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="UnitName" type="Label" parent="Background/MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 2
theme = ExtResource("2_wle3t")
theme_override_constants/outline_size = 4
text = "Zombah St. Rah"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UnitInventorySlot" parent="Background/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("3_w2fve")]
layout_mode = 2
mouse_filter = 0

[node name="UnitInventorySlot2" parent="Background/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("3_w2fve")]
layout_mode = 2

[node name="UnitInventorySlot3" parent="Background/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("3_w2fve")]
layout_mode = 2

[node name="UnitInventorySlot4" parent="Background/MarginContainer/VBoxContainer/Inventory" instance=ExtResource("3_w2fve")]
layout_mode = 2
